# bbs-crawl-and-notify

./: 1  4  INSTALL.md  Makefile  README.md  crawler_for_fm_korea.py  global_config.yaml.template  global_config_controller.py  install.md  link_visitor_client_context.py  main.py  notifier_for_telegram.py  pyproject.toml  requirements.txt  setup.py
src/bbs_crawl_and_notify/: crawler_for_dc_inside.py  crawler_for_fm_korea.py  global_config_controller.py  main.py  notifier_for_telegram.py  visited_item_recorder.py
tests/: test_crawler_for_fm_korea.py  test_escape_text.py  test_telegram_notifier_config_validator.py
