[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bbs_crawl_and_notify"
version = "1.0.0"
description = "This project retrieves content from websites and sends it to a Telegram chat room."
authors = [
    { name="Zhang-hoon Dennis Oh", email="zhanghoondennisoh@gmail.com" }
]
license = { text = "APACHE-2.0" }
requires-python = ">=3.13.1"
dependencies = [
    #
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
