[project]
name = "bbs-crawl-and-notify"
version = "1.0.0"
description = "This project retrieves content from websites and sends it to a Telegram chat room."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "dc-api>=0.8.0",
    "filetype>=1.2.0",
    "loguru>=0.7.3",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "selenium>=4.38.0",
]
